# CrabIDE

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RESUME.md  ROADMAP.md  ROADMAP_pure_rust_glr.md  _brace_check.py  _brace_check2.py  _brace_out.txt  _check_indent.py  _check_lines.py  _check_lines2.py  _find_git2.py  _read_lines.py  _read_lines2.py  _read_submodule.py  deny.toml  deny.toml.bak2  fix_lib.ps1  functions.txt  test_program.py
.cargo/: config.toml
.claude/: settings.local.json
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
_tools/: patch_allows.py
assets/: icon.icns
crates/crabide-app/: Cargo.toml
crates/crabide-app/src/: app.rs  icon_data.rs  main.rs  window_state.rs
crates/crabide-buffer/: Cargo.toml
crates/crabide-buffer/src/: buffer.rs  cursor.rs  history.rs  lib.rs  snippet.rs
crates/crabide-config/: Cargo.toml
crates/crabide-config/src/: keybindings.rs  lib.rs  settings.rs  theme.rs
crates/crabide-core/: Cargo.toml
crates/crabide-core/src/: error.rs  event.rs  lib.rs  traits.rs  types.rs
crates/crabide-dap/: Cargo.toml
crates/crabide-dap/src/: client.rs  lib.rs  transport.rs  types.rs
crates/crabide-dap/tests/: types_test.rs
crates/crabide-extensions/: Cargo.toml
crates/crabide-extensions/src/: host.rs  hot_reload.rs  lib.rs  registry.rs  wasm_ext.rs
crates/crabide-extensions/src/extensions/: git_blame.rs  markdown_preview.rs  mod.rs  rust_analyzer_lite.rs  theme_switcher.rs  todo_highlighter.rs
crates/crabide-extensions/tests/: extensions_test.rs
crates/crabide-git/: Cargo.toml
crates/crabide-git/src/: lib.rs
crates/crabide-git/tests/: git_test.rs
crates/crabide-lsp/: Cargo.toml
crates/crabide-lsp/src/: client.rs  config.rs  convert.rs  lib.rs  server_mgr.rs  transport.rs
crates/crabide-search/: Cargo.toml
crates/crabide-search/src/: lib.rs
crates/crabide-syntax/: Cargo.toml
crates/crabide-syntax/src/: engine.rs  fold.rs  grammar.rs  highlight.rs  indent.rs  lib.rs  locals.rs  outline.rs  queries.rs
crates/crabide-terminal/: Cargo.toml
crates/crabide-terminal/src/: grid.rs  lib.rs  manager.rs  pty.rs
crates/crabide-ui/: Cargo.toml
crates/crabide-ui/src/: layout.rs  lib.rs  palette.rs  state.rs
crates/crabide-ui/src/panels/: breadcrumbs.rs  context_menu.rs  debug_panel.rs  debug_toolbar.rs  editor.rs  extensions_panel.rs  file_explorer.rs  find_replace.rs  fuzzy_finder.rs  git_panel.rs  gutter.rs  keybindings_editor.rs  minimap.rs  mod.rs  output_panel.rs  peek_view.rs  problems_panel.rs  settings_panel.rs  status_bar.rs  symbol_outline.rs  tab_bar.rs  terminal_panel.rs  theme_picker.rs  workspace_search.rs
crates/crabide-vfs/: Cargo.toml
crates/crabide-vfs/src/: helpers.rs  lib.rs  local.rs  memory.rs  read_only.rs  resolver.rs  watcher.rs
crates/crabide-workspace/: Cargo.toml
crates/crabide-workspace/src/: lib.rs  workspace.rs
crates/crabide-workspace/tests/: workspace_test.rs
docs/: ARCHITECTURE.md  BUILD.md  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dap_frame.rs  dap_message.rs  lsp_frame.rs  lsp_message.rs
tools/: check_actions.js  count_actions.js  gen_icon.py  package-linux.sh  package-macos.sh  package-windows.ps1
wit/: crabide-extension.wit
